--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,16 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+    <repository>
+        <id>maven-releases</id>
+        <url>http://192.168.112.129:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>maven-snapshots</id>
+        <url>http://192.168.112.129:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    </distributionManagement>
+
 
 </project>
