--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                     <groupId>org.codehaus.mojo</groupId>
+                     <artifactId>versions-maven-plugin</artifactId>
+                     <version>2.7</version>
+            </plugin>
         </plugins>
     </build>
     <distributionManagement>
