--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://database-1.c1cykg6mc56m.us-east-1.rds.amazonaws.com:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://database-1.cxomsk4ske3o.eu-north-1.rds.amazonaws.com:3306/dbb?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=Root1234
 spring.jpa.show-sql=true
