--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://database-1.cxomsk4ske3o.eu-north-1.rds.amazonaws.com:3306/dbc?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=Root1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
