--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                   <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M7</version> <!-- or the latest version -->
+            <version>2.22.2</version> <!-- or the latest version -->
         </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
