--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
         <plugins>
                
             <plugin>
+                       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version> <!-- Use this version for better stability -->
+            <configuration>
+                <skipTests>false</skipTests> <!-- Ensure tests are not skipped -->
+            </configuration>
+        </plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
