--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>tp-foyer</artifactId>
-    <version>5.0.1</version>
+    <version>5.0.3</version>
     <name>tp-foyer</name>
     <description>tp-foyer</description>
     <properties>
@@ -57,6 +57,7 @@
 
     <build>
         <plugins>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -67,6 +68,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                     <groupId>org.codehaus.mojo</groupId>
+                     <artifactId>versions-maven-plugin</artifactId>
+                     <version>2.7</version>
             </plugin>
         </plugins>
     </build>
