--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                 <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M7</version> <!-- or the latest version -->
                 <configuration>
                     <excludes>
                         <exclude>
