--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,16 @@
     <build>
         <plugins>
             <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M7</version> <!-- or the latest version -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                      <groupId>org.codehaus.mojo</groupId>
@@ -69,15 +76,16 @@
             </plugin>
         </plugins>
     </build>
-<distributionManagement>
+    <distributionManagement>
     <repository>
         <id>maven-releases</id>
-        <url>http://192.168.107.128:8081/repository/maven-releases/</url>
+        <url>http://192.168.112.129:8081/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
         <id>maven-snapshots</id>
-        <url>http://192.168.107.128:8081/repository/maven-snapshots/</url>
+        <url>http://192.168.112.129:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
     </distributionManagement>
+
 
 </project>
