--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   config:
-    import: optional:configserver:http://config-service:8888
+    import: optional:configserver:http://localhost:8888
   application:
     name: universite-service
