--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
         jdk 'JDK17'
         maven 'Maven3'
     }
+    environment {
+        SCANNER_HOME = tool 'sonar-scanner'
+    }
 
 
     stages {
