--- a/src/main/resources/config-k8s/discovery-service.yml
+++ b/src/main/resources/config-k8s/discovery-service.yml
@@ -1,11 +1,11 @@
+server:
+  port: 8761
 eureka:
   instance:
-    hostname: discovery-service-k8s
+    hostname: discovery-service
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 
-server:
-  port: 8761
