--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -9,6 +9,7 @@ spring:
         git:
          uri: https://github.com/samiouerfelli/DEVOPS_PROJECT_G2.git
          default-label: config-server
+         clone-on-start: true
          search-paths: config-k8s
          
          
