--- a/discovery-service-dep.yml
+++ b/discovery-service-dep.yml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,6 +22,18 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
+            - name: eureka.client.serviceUrl.defaultZone
+              value: http://discovery-service:8761/eureka/
+            - name: spring.cloud.config.uri
+              value: http://config-server-service:8888
+            - name: eureka.client.registerWithEureka
+              value: "false"
+            - name: eureka.client.fetchRegistry
+              value: "false"
+            - name: SERVER_PORT
+              value: "8761"
+
+              
 ---
 apiVersion: v1
 kind: Service
