--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,6 +17,13 @@ pipeline {
                 sh "mvn clean"
             }
         }
+           stage('Setup DB') {
+            steps {
+                script {
+                    sh 'docker-compose up -d'
+                }
+            }
+        }
 
         stage('Compile') {
             steps {
