--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,5 +1,13 @@
 spring:
-  config:
-    import: optional:configserver:http://config-server-service:8888
   application:
     name: discovery-service
+server:
+  port: 8761
+eureka:
+  instance:
+    hostname: discovery-service
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://discovery-service:8761/eureka/
