--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,5 +1,20 @@
 spring:
-  config:
-    import: optional:configserver:http://config-server-service:8888
+  cloud:
+    config:
+      enabled: false
+  datasource:
+    url: jdbc:postgresql://db-service-blocdb:5432/blocdb?useSSL=false
+    username: ricky
+    password: 190199
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   application:
     name: bloc-service
+
+server:
+  port: 8050
