--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -15,6 +15,11 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   application:
     name: bloc-service
-
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://discovery-service:8761/eureka/
+    registerWithEureka: true
+    fetchRegistry: true
 server:
   port: 8050
