--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,16 +1,21 @@
+#spring:
+ # cloud:
+  #  config:
+   #   enabled: false
+  #application:
+   # name: discovery-service
+#server:
+ # port: 8761
+#eureka:
+ # instance:
+  #  hostname: discovery-service
+  #client:
+   # registerWithEureka: false
+    #fetchRegistry: false
+    #serviceUrl:
+     # defaultZone: http://discovery-service:8761/eureka/
 spring:
-  cloud:
-    config:
-      enabled: false
+  config:
+    import: optional:configserver:http://config-server-service:8888
   application:
     name: discovery-service
-server:
-  port: 8761
-eureka:
-  instance:
-    hostname: discovery-service
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
