--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,25 +1,5 @@
 spring:
-  cloud:
-    config:
-      enabled: false
-  datasource:
-    url: jdbc:postgresql://db-service-blocdb:5432/blocdb?useSSL=false
-    username: ricky
-    password: 190199
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  config:
+    import: optional:configserver:http://config-server-service:8888
   application:
     name: bloc-service
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
-    registerWithEureka: true
-    fetchRegistry: true
-server:
-  port: 8050
