--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,5 @@
 spring:
-  cloud:
-    config:
-      enabled: false
-  datasource:
-    url: jdbc:postgresql://localhost:5432/blocdb?useSSL=false
-    username: ricky
-    password: 190199
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-server:
-  port: 8050
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-    registerWithEureka: true
-    fetchRegistry: true
+  config:
+    import: optional:configserver:http://localhost:8888
+  application:
+    name: bloc-service
