--- a/src/main/resources/config-k8s/etudiant-service-k8s.yml
+++ b/src/main/resources/config-k8s/etudiant-service-k8s.yml
@@ -10,6 +10,10 @@ spring:
     show-sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  cloud:
+    config:
+      uri: http://config-server:8888  # Address of the Config Server service in Kubernetes
+      fail-fast: true
 
 
 server:
