--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,6 +1,8 @@
 server:
   port: 8888
 spring:
+  profiles:
+    active: k8s
   application:
     name: config-server
   cloud:
@@ -11,5 +13,3 @@ spring:
          default-label: config-server
          clone-on-start: true
          search-paths: config-k8s
-         
-         
