--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -15,7 +15,13 @@
     #serviceUrl:
      # defaultZone: http://discovery-service:8761/eureka/
 spring:
-  config:
-    import: optional:configserver:http://config-server-service:8888
+  spring:
+  cloud:
+    config:
+      uri: http://config-server-service:8888  # Address of the Config Server service in Kubernetes
+      fail-fast: true
   application:
     name: discovery-service
+
+
+    
