--- a/jenkinsfile
+++ b/jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
         stage('Publish To Nexus') {
             steps {
                 withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh 'java -jar -Dspring.profiles.active=k8s discovery-server.jar'
+                     sh 'mvn deploy -Dspring.profiles.active=k8s'
                 }
             }
         }
