--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -10,4 +10,4 @@ spring:
          uri: https://github.com/samiouerfelli/DEVOPS_PROJECT_G2.git
          default-label: config-server
          clone-on-start: true
-         search-paths: config-k8s
+         search-paths: "{profile}"
