--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,11 +2,11 @@ server:
   port: 8888
 spring:
   profiles:
-    active: native
+    active: local
   application:
     name: config-server
   cloud:
     config:
       server:
         native:
-          search-locations: classpath:/configurations
+          search-locations: classpath:/
