--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,6 @@ pipeline {
     }
     environment {
         SCANNER_HOME = tool 'sonar-scanner'
-        SPRING_PROFILES_ACTIVE = 'local'
-
     }
 
 
@@ -53,14 +51,14 @@ pipeline {
 
         stage('Build') {
             steps {
-                sh "mvn package"
+                sh "mvn package -Dspring.profiles.active=local "
             }
         }
 
         stage('Publish To Nexus') {
             steps {
                 withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh "mvn deploy"
+                    sh "mvn deploy -Dspring.profiles.active=local "
                 }
             }
         }
