--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,7 +1,10 @@
 spring:
   application:
     name: discovery-service
+  cloud:
+    config:
+      uri: http://config-server-service:8888
   spring:
     config:
-      import: optional:configserver:http://config-server-service:8888
+      enable: false
 
