--- a/discovery-service-dep.yml
+++ b/discovery-service-dep.yml
@@ -22,6 +22,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
+            - name: SERVER_PORT
+              value: "8761"
               
 ---
 apiVersion: v1
