--- a/src/main/resources/discoveryservice-k8s.yml
+++ b/src/main/resources/discoveryservice-k8s.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 eureka:
   instance:
-    hostname: discovery-service
+    hostname: discoveryservice
   client:
     registerWithEureka: false
     fetchRegistry: false
