--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
   application:
-    name: discovery-service
+    name: discoveryservice
 
   
