--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: discoveryservice
+    name: discovery-service
   cloud:
     config:
       uri: http://config-server-service:8888
