--- a/src/main/resources/discovery-service-k8s.yml
+++ b/src/main/resources/discovery-service-k8s.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 eureka:
   instance:
-    hostname: discoveryservice
+    hostname: discovery-service
   client:
     registerWithEureka: false
     fetchRegistry: false
