--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,5 @@
 spring:
   config:
-    import: "optional:configserver:http://config-server-service.webapps:8888"
+    import: optional:configserver:http://localhost:8888
   application:
     name: discovery-service
-
-
-  
