--- a/src/main/resources/discovery-service-k8s.yml
+++ b/src/main/resources/discovery-service-k8s.yml
@@ -8,4 +8,7 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://discovery-service.webapps:8761/eureka/
+spring:
+  profiles:
+    active: k8s
 
