--- a/src/main/resources/discovery-service-k8s.yml
+++ b/src/main/resources/discovery-service-k8s.yml
@@ -7,7 +7,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://discovery-service.webapps:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 spring:
   profiles:
     active: k8s
