--- a/discovery-service-dep.yml
+++ b/discovery-service-dep.yml
@@ -38,5 +38,4 @@ spec:
     - protocol: TCP
       port: 8761
       targetPort: 8761
-      nodePort: 30001  
-  type: NodePort
+  type: LoadBalancer
