--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh "mvn test"
+                sh "mvn test -Dspring.profiles.active=local"
             }
         }
 
@@ -62,14 +62,14 @@ pipeline {
 
         stage('Build') {
             steps {
-                sh "mvn package"
+                sh "mvn package -Dspring.profiles.active=local "
             }
         }
 
         stage('Publish To Nexus') {
             steps {
                 withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh "mvn deploy"
+                    sh "mvn deploy -Dspring.profiles.active=local "
                 }
             }
         }
