--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,5 +1,5 @@
 spring:
   config:
-    import: optional:configserver:http://config-server-service:8888
+    import: "optional:configserver:http://config-server-service.webapps:8888"
   application:
     name: bloc-service
