--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -10,3 +10,5 @@ spring:
          uri: https://github.com/samiouerfelli/DEVOPS_PROJECT_G2.git
          default-label: config-server
          clone-on-start: true
+         searchPaths: src/main/resources
+
