--- a/config-service-dep.yml
+++ b/config-service-dep.yml
@@ -27,7 +27,7 @@ spec:
                 name: config-server-secrets
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: k8s
+              value: prod
 ---
 apiVersion: v1
 kind: Service
