--- a/src/main/resources/bloc-service-prod.yml
+++ b/src/main/resources/bloc-service-prod.yml
@@ -11,7 +11,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   profiles:
-    active: k8s
+    active: prod
 server:
   port: 8050
 
