--- a/src/main/resources/prod/bloc-service-prod.yml
+++ b/src/main/resources/prod/bloc-service-prod.yml
@@ -12,4 +12,13 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: 8050
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://discovery-service:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: bloc-service
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
