--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	 <distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://40.114.241.96:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://40.114.241.96:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
