--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,6 +11,6 @@ spring:
           uri: https://github.com/samiouerfelli/DEVOPS_PROJECT_G2.git
           default-label: config-server
           clone-on-start: true
-          search-paths: "{profile}"
+          search-paths: src/main/resources/local
           username: samiouerfelli
           password: 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
