--- a/src/main/resources/prod/reservation-service-prod.yml
+++ b/src/main/resources/prod/reservation-service-prod.yml
@@ -10,12 +10,16 @@ spring:
     show-sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-  cloud:
-    config:
-      uri: http://config-server:8888  # Address of the Config Server service in Kubernetes
-      fail-fast: true
-
-
 server:
   port: 8054
+eureka:
+  client:
+    service-url:
+      defaultZone: http://discovery-service:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: reservation-service
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
 
