--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: ricky
       POSTGRES_PASSWORD: 190199
-      POSTGRES_DB: universitedb
+      POSTGRES_DB: universitdb
       PGDATA: /var/lib/postgresql/data
     volumes:
       - postgres6:/var/lib/postgresql/data
