--- a/universite-dep.yml
+++ b/universite-dep.yml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_DB
-              value: universitedb
+              value: universitdb
             - name: POSTGRES_USER
               value: ricky
             - name: POSTGRES_PASSWORD
