--- a/config-service-dep.yml
+++ b/config-service-dep.yml
@@ -21,10 +21,8 @@ spec:
           ports:
             - containerPort: 8888
           envFrom:
-            #- configMapRef:
-            #  name: config-server-config #url of rep + branch + path
             - secretRef:
-                name: config-server-secrets #git username + git password
+                name: git-secrets
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
