--- a/etudiant-dep.yml
+++ b/etudiant-dep.yml
@@ -2,49 +2,6 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: db-service-etudiantdb
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: db-service-etudiantdb
-  template:
-    metadata:
-      labels:
-        app: db-service-etudiantdb
-    spec:
-      containers:
-        - name: db
-          image: postgres:latest
-          ports:
-            - containerPort: 5432
-          env:
-            - name: POSTGRES_DB
-              value: etudiantdb
-            - name: POSTGRES_USER
-              value: ricky
-            - name: POSTGRES_PASSWORD
-              value: "190199"  
-            - name: PGDATA
-              value: /var/lib/postgresql/data/dbfiles
-      
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: db-service-etudiantdb
-spec:
-  type: ClusterIP
-  ports:
-    - port: 5434
-      targetPort: 5432
-  selector:
-    app: db-service-etudiantdb
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
   name: etudiant-service-deployment
 spec:
   selector:
@@ -62,11 +19,12 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8052
+          envFrom:
+            - secretRef:
+                name: etudiantdb-secrets
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
-          
-
 ---
 apiVersion: v1
 kind: Service
