--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,5 +12,5 @@ spring:
           default-label: config-server
           clone-on-start: true
           search-paths: src/main/resources/local
-          username: samiouerfelli
-          password: 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
+          username: ${GIT_USERNAME}
+          password: ${GIT_PASSWORD}
