--- a/jenkinsfile
+++ b/jenkinsfile
@@ -48,17 +48,34 @@ pipeline {
                 }
             }
         }
-
         stage('Build') {
             steps {
-                sh "mvn package -Dspring.profiles.active=local "
+                withCredentials([
+                    string(credentialsId: 'GIT_USERNAME', variable: 'GIT_USERNAME'),
+                    string(credentialsId: 'GIT_PASSWORD', variable: 'GIT_PASSWORD')
+                ]) {
+                    sh '''
+                        export GIT_USERNAME=$GIT_USERNAME
+                        export GIT_PASSWORD=$GIT_PASSWORD
+                        mvn package -Dspring.profiles.active=local
+                    '''
+                }
             }
         }
 
         stage('Publish To Nexus') {
             steps {
-                withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh "mvn deploy -Dspring.profiles.active=local "
+                withCredentials([
+                    string(credentialsId: 'GIT_USERNAME', variable: 'GIT_USERNAME'),
+                    string(credentialsId: 'GIT_PASSWORD', variable: 'GIT_PASSWORD')
+                ]) {
+                    withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
+                        sh '''
+                            export GIT_USERNAME=$GIT_USERNAME
+                            export GIT_PASSWORD=$GIT_PASSWORD
+                            mvn deploy -Dspring.profiles.active=local
+                        '''
+                    }
                 }
             }
         }
