--- a/jenkinsfile
+++ b/jenkinsfile
@@ -83,6 +83,11 @@ pipeline {
                 }
             }
         }
+               stage('Run Discovery Server') {
+                           steps {
+                           sh " docker-compose up -d "
+                            }
+                 }
 
         stage('Deploy To Kubernetes') {
             steps {
