--- a/jenkinsfile
+++ b/jenkinsfile
@@ -96,7 +96,7 @@ pipeline {
 
         stage('Deploy To Kubernetes') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'webapps', serverUrl: 'https://k8s-cluster-aof2s6e7.hcp.westeurope.azmk8s.io:443') {
+                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
                     sh "kubectl apply -f bloc-service-dep.yml"
 
                 }
@@ -105,9 +105,9 @@ pipeline {
 
         stage('Verify the Deployment') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'webapps', serverUrl: 'https://k8s-cluster-aof2s6e7.hcp.westeurope.azmk8s.io:443') {
-                    sh "kubectl get pods -n webapps"
-                    sh "kubectl get svc -n webapps"
+                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
+                    sh "kubectl get pods -n devops-project"
+                    sh "kubectl get svc -n devops-project"
                 }
             }
         }
