--- a/discovery-service-dep.yml
+++ b/discovery-service-dep.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: discovery-server
-  namespace: webapps
+  namespace: devops-project
 spec:
   replicas: 1
   selector:
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: discovery-service
-  namespace: webapps
+  namespace: devops-project
 spec:
   selector:
     app: discovery-server
@@ -38,4 +38,4 @@ spec:
     - protocol: TCP
       port: 8761
       targetPort: 8761
-  type: ClusterIP
+  type: NodePort
