--- a/config-service-dep.yml
+++ b/config-service-dep.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: config-server-deployment
-  namespace: webapps
+  namespace: devops-project
 spec:
   replicas: 1
   selector:
@@ -31,7 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: config-server-service
-  namespace: webapps
+  namespace: devops-project
 spec:
   selector:
     app: config-server
