--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -2,10 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp-deployment
+  namespace: myapp
   labels:
     app: myapp
 spec:
-  replicas: 2
+  replicas: 1  # Starting with 1 replica for testing
   selector:
     matchLabels:
       app: myapp
@@ -17,12 +18,14 @@ spec:
       containers:
       - name: myapp
         image: lookabj/myapp:latest
+        imagePullPolicy: IfNotPresent  # Important for Kind
         ports:
         - containerPort: 8080
         resources:
           requests:
-            memory: "256Mi"
+            memory: "128Mi"  # Reduced for Kind
             cpu: "100m"
           limits:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: "256Mi"
+            cpu: "200m"
+      # No readiness/liveness probes for initial testing
