--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -9,7 +9,12 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  replicas: 2  # Increased to 2 replicas like in the example
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -18,6 +23,25 @@ spec:
       containers:
         - name: myapp
           image: lookabj/myapp:latest
-          imagePullPolicy: Always  # Changed to Always like in the example
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "200m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
