--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -3,11 +3,13 @@ kind: Service
 metadata:
   name: myapp-service
   namespace: myapp
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
   selector:
     app: myapp
   ports:
     - protocol: TCP
-      port: 8080  # Changed to 8080 to match the example
+      port: 8080
       targetPort: 8080
-  type: LoadBalancer  # Changed to LoadBalancer like in the example
+  type: LoadBalancer
