--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Web Server (Tomcat) configuration :
 server.port=8089
